[package]
name = "hack-assembler"
version = "0.1.0"
authors = ["ysaito1001"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1.2"
phf = { version = "0.8.0", features = ["macros"] }
structopt = "0.3.17"

[dev-dependencies]
maplit = "1.0.2"
